--- a/ec2.yml
+++ b/ec2.yml
@@ -4,4 +4,4 @@ Resources:
     Properties: 
       ImageId: "ami-09d95fab7fff3776c"
       KeyName: "jenkins"
-      AvailabilityZone: "us-east-1a"
+      #   AvailabilityZone: "us-east-1a"
